5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4370/executions/1596_842.log
== TEST (2019-03-26 19:41:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = int(input("numero com 4 algarismo: "))
primeiro_algo = numero // 100
segundo_algorismo = (numero % 1000) // 100
terceiro_algorismo =((numero % 1000) % 100) % 10)
quarto_algorismo = (((numero % 100) % 100) % 10)
somatorio_algarismo = primeiro_algarismo + segundo_algarismo = terceiro_algarismo + quarto_algarismo
print(somatorio_algarismo)

-- ERROR:
File "XXXX", line 7
    terceiro_algorismo =((numero % 1000) % 100) % 10)
                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:41:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = int(input("numero com 4 algarismo: "))
primeiro_algo = numero // 100
segundo_algorismo = (numero % 1000) // 100
terceiro_algarismo =((numero % 1000) % 100) % 10)
quarto_algorismo = (((numero % 100) % 100) % 10)
somatorio_algarismo = primeiro_algarismo + segundo_algarismo = terceiro_algarismo + quarto_algarismo
print(somatorio_algarismo)

-- ERROR:
File "XXXX", line 7
    terceiro_algarismo =((numero % 1000) % 100) % 10)
                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:41:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = int(input("numero com 4 algarismo: "))
primeiro_algo = numero // 100
segundo_algorismo = (numero % 1000) // 100
terceiro_algarismo =((numero % 1000) % 100) // 10)
quarto_algorismo = (((numero % 100) % 100) % 10)
somatorio_algarismo = primeiro_algarismo + segundo_algarismo = terceiro_algarismo + quarto_algarismo
print(somatorio_algarismo)

-- ERROR:
File "XXXX", line 7
    terceiro_algarismo =((numero % 1000) % 100) // 10)
                                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:42:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = int(input("numero com 4 algarismo: "))
primeiro_algo = numero // 100
segundo_algorismo = (numero % 1000) // 100
terceiro_algarismo =((numero % 1000) % 100) // 10
quarto_algorismo = (((numero % 100) % 100) % 10)
somatorio_algarismo = primeiro_algarismo + segundo_algarismo = terceiro_algarismo + quarto_algarismo
print(somatorio_algarismo)

-- ERROR:
File "XXXX", line 9
    somatorio_algarismo = primeiro_algarismo + segundo_algarismo = terceiro_algarismo + quarto_algarismo
                         ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:42:58) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = int(input("numero com 4 algarismo: "))
primeiro_algo = numero // 100
segundo_algorismo = (numero % 1000) // 100
terceiro_algarismo =((numero % 1000) % 100) // 10
quarto_algorismo = (((numero % 100) % 100) % 10)
somatorio_algarismo = primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(somatorio_algarismo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    somatorio_algarismo = primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
NameError: name 'primeiro_algarismo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:43:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = int(input("numero com 4 algarismo: "))
primeiro_algorismo = numero // 100
segundo_algorismo = (numero % 1000) // 100
terceiro_algarismo =((numero % 1000) % 100) // 10
quarto_algorismo = (((numero % 100) % 100) % 10)
somatorio_algarismo = primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(somatorio_algarismo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    somatorio_algarismo = primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
NameError: name 'primeiro_algarismo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:44:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = int(input("numero com 4 algarismo: "))
primeiro_algorismo = numero // 1000
segundo_algorismo = (numero % 1000) // 100
terceiro_algarismo =((numero % 1000) % 100) // 10
quarto_algorismo = (((numero % 100) % 100) % 10)
somatorio_algarismo = primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(somatorio_algarismo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    somatorio_algarismo = primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
NameError: name 'primeiro_algarismo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:45:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = int(input("numero com 4 algarismo: "))
primeiro_algorismo = numero // 1000
segundo_algorismo = (numero % 1000) // 100
terceiro_algarismo =((numero % 1000) % 100) // 10
quarto_algarismo = (((numero % 100) % 100) % 10)
somatorio_algarismo = primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(somatorio_algarismo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    somatorio_algarismo = primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
NameError: name 'primeiro_algarismo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:46:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = int(input("numero com 4 algarismo: "))
primeiro_algorismo = numero // 1000
segundo_algorismo = (numero % 1000) // 100
terceiro_algarismo =((numero % 1000) % 100) // 10
quarto_algarismo = (((numero % 1000) % 100) % 10)
somatorio_algarismo = primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(somatorio_algarismo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    somatorio_algarismo = primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
NameError: name 'primeiro_algarismo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:48:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = int(input("numero com 4 algarismo: "))
primeiro_algarismo = numero // 1000
segundo_algorismo = (numero % 1000) // 100
terceiro_algarismo =((numero % 1000) % 100) // 10
quarto_algarismo = (((numero % 1000) % 100) % 10)
somatorio_algarismo = primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(somatorio_algarismo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    somatorio_algarismo = primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
NameError: name 'segundo_algarismo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:48:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = int(input("numero com 4 algarismo: "))
primeiro_algarismo = numero // 1000
segundo_algarismo = (numero % 1000) // 100
terceiro_algarismo =((numero % 1000) % 100) // 10
quarto_algarismo = (((numero % 1000) % 100) % 10)
somatorio_algarismo = primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(somatorio_algarismo)

-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:48:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = int(input("numero com 4 algarismo: "))
primeiro_algarismo = numero // 1000
segundo_algarismo = (numero % 1000) // 100
terceiro_algarismo =((numero % 1000) % 100) // 10
quarto_algarismo = (((numero % 1000) % 100) % 10)
somatorio_algarismo = primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(somatorio_algarismo)

-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:48:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = int(input("numero com 4 algarismo: "))
primeiro_algarismo = numero // 1000
segundo_algarismo = (numero % 1000) // 100
terceiro_algarismo =((numero % 1000) % 100) // 10
quarto_algarismo = (((numero % 1000) % 100) % 10)
somatorio_algarismo = primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(somatorio_algarismo)

-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:49:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = int(input("numero com 4 algarismo: "))
primeiro_algarismo = numero // 1000
segundo_algarismo = (numero % 1000) // 100
terceiro_algarismo =((numero % 1000) % 100) // 10
quarto_algarismo = (((numero % 1000) % 100) % 10)
somatorio_algarismo = primeiro_algarismo + segundo_algarismo + terceiro_algarismo + quarto_algarismo
print(somatorio_algarismo)

-- EXECUTION TIME:
0.16803
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
